# aoc-visuals

./: .gitignore  Cargo.toml  Makefile.toml  README.md  index.html
.github/workflows/: rust.yml
src/: main.rs  menu.rs
src/aoc_2018/: day1.rs  day2.rs  day3.rs  mod.rs
src/commons/: aoc_common.rs  constants.rs  file_runner.rs  fps.rs  mod.rs  window_setup.rs
