[package]
name = "aoc_animations"
version = "0.1.0"
authors = []
edition = "2021"
resolver = "2"

[dependencies]
rand = "0.8"
tracing-wasm = "=0.2.0"

# Dependencies for native only.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
bevy = { version = "0.5", default-features = false, features = ["bevy_winit", "render", "bevy_wgpu"] }

[target.'cfg(target_os = "linux")'.dependencies]
winit = { version = "0.24", features=["x11"]}

# Dependencies for WASM only.
[target.'cfg(target_arch = "wasm32")'.dependencies]
bevy = { version = "0.5", default-features = false, features = ["bevy_winit", "render"] }
bevy_webgl2 = "0.5"
getrandom = { version="0.2", features=["wasm-bindgen"] }

[profile.dev]
opt-level = 1
