[package]
name = "aoc_animations"
version = "0.1.0"
authors = []
edition = "2021"
resolver = "2"

[dependencies]
rand = "0.8"

# Dependencies for native only.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
bevy = { version = "0.6", default-features = false, features = ["bevy_winit", "render"] }
bevy_ecs = "0.6.0"

# Dependencies for WASM only.
[target.'cfg(target_arch = "wasm32")'.dependencies]
bevy = { version = "0.6", default-features = false, features = ["bevy_winit", "render"] }
bevy_ecs = "0.6.0"

[profile.dev]
opt-level = 1
